--- a/views/polls/add_poll.ejs
+++ b/views/polls/add_poll.ejs
@@ -1,135 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <% include ../partials/head %>
-</head>
-<body class="hold-transition skin-blue sidebar-mini">
+  </head>
+  <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
-        <header class="main-header">
-            <% include ../partials/header %>
-        </header>
+      <header class="main-header"><% include ../partials/header %></header>
 
-        <aside class="main-sidebar">
-            <% include ../partials/aside %>
-        </aside>
+      <aside class="main-sidebar"><% include ../partials/aside %></aside>
 
-        <div class="content-wrapper">
-            <section class="content-header">
-                <h1>Manage Polls</h1>
-            </section>
-            
-            <section class="content">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="box box-info">
-                            <div class="box-header">
-                                <h3 class="box-title">Add Poll</h3>
-                            </div>
-                            <form id="poll_form" method="POST" class="form-horizontal">
-                                <div class="box-body">
-                                    <div class="alert alert-danger" style="display: none">
-                                        <i class="fa fa-warning"></i>
-                                        <button class="close" data-dismiss="alert">×</button>
-                                        <span id="errorMsg">Please check your inputs.</span>
-                                    </div>
-                                    <div class="alert alert-success" style="display: none">
-                                        <i class="fa fa-check"></i>
-                                        <button class="close" data-dismiss="alert">×</button>
-                                        <span id="successMsg">Poll added successfully!</span>
-                                    </div>
+      <div class="content-wrapper">
+        <section class="content-header">
+          <h1 id="formTitle">Add Poll</h1>
+        </section>
 
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Poll Question <span style="color:red;">*</span></label>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" id="question" name="question" placeholder="Enter Poll Question" required>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Options <span style="color:red;">*</span></label>
-                                        <div class="col-md-6" id="options-container">
-                                            <input type="text" class="form-control option-input" name="options[]" placeholder="Option 1" required>
-                                            <input type="text" class="form-control option-input" name="options[]" placeholder="Option 2" required>
-                                            <input type="text" class="form-control option-input" name="options[]" placeholder="Option 3" required>
-                                            <input type="text" class="form-control option-input" name="options[]" placeholder="Option 4" required>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Correct Answer <span style="color:red;">*</span></label>
-                                        <div class="col-md-6">
-                                            <select class="form-control" id="correct_answer" name="correctAnswerIndex" required>
-                                                <option value="">Select Correct Answer</option>
-                                                <option value="0">Option 1</option>
-                                                <option value="1">Option 2</option>
-                                                <option value="2">Option 3</option>
-                                                <option value="3">Option 4</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="box-footer">
-                                    <button type="submit" id="save_poll" class="btn btn-success">
-                                        <i class="glyphicon glyphicon-check"></i> Submit
-                                    </button>
-                                    <button type="reset" class="btn btn-danger">
-                                        <i class="glyphicon glyphicon-refresh"></i> Reset
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+        <section class="content">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="box box-info">
+                <div class="box-header">
+                  <h3 class="box-title" id="boxTitle">Add Poll</h3>
                 </div>
-            </section>
-        </div>
+                <form id="poll_form" method="POST" class="form-horizontal">
+                  <input type="hidden" id="pollId" name="pollId" />
 
-        <footer class="main-footer">
-            <% include ../partials/footer %>
-        </footer>
+                  <div class="box-body">
+                    <div class="alert alert-danger" style="display: none">
+                      <i class="fa fa-warning"></i>
+                      <button class="close" data-dismiss="alert">×</button>
+                      <span id="errorMsg">Please check your inputs.</span>
+                    </div>
+                    <div class="alert alert-success" style="display: none">
+                      <i class="fa fa-check"></i>
+                      <button class="close" data-dismiss="alert">×</button>
+                      <span id="successMsg">Poll saved successfully!</span>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-md-3 control-label"
+                        >Poll Question <span style="color: red">*</span></label
+                      >
+                      <div class="col-md-6">
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="question"
+                          name="question"
+                          placeholder="Enter Poll Question"
+                          required
+                        />
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-md-3 control-label"
+                        >Options <span style="color: red">*</span></label
+                      >
+                      <div class="col-md-6" id="options-container">
+                        <input
+                          type="text"
+                          class="form-control option-input"
+                          name="options[]"
+                          placeholder="Option 1"
+                          required
+                        />
+                        <input
+                          type="text"
+                          class="form-control option-input"
+                          name="options[]"
+                          placeholder="Option 2"
+                          required
+                        />
+                        <input
+                          type="text"
+                          class="form-control option-input"
+                          name="options[]"
+                          placeholder="Option 3"
+                          required
+                        />
+                        <input
+                          type="text"
+                          class="form-control option-input"
+                          name="options[]"
+                          placeholder="Option 4"
+                          required
+                        />
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-md-3 control-label"
+                        >Correct Answer <span style="color: red">*</span></label
+                      >
+                      <div class="col-md-6">
+                        <select
+                          class="form-control"
+                          id="correct_answer"
+                          name="correctAnswerIndex"
+                          required
+                        >
+                          <option value="">Select Correct Answer</option>
+                          <option value="0">Option 1</option>
+                          <option value="1">Option 2</option>
+                          <option value="2">Option 3</option>
+                          <option value="3">Option 4</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="box-footer">
+                    <button
+                      type="submit"
+                      id="save_poll"
+                      class="btn btn-success"
+                    >
+                      <i class="glyphicon glyphicon-check"></i> Save
+                    </button>
+                    <button type="reset" class="btn btn-danger">
+                      <i class="glyphicon glyphicon-refresh"></i> Reset
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <footer class="main-footer"><% include ../partials/footer %></footer>
     </div>
 
     <% include ../partials/tail %>
 
     <script>
-        $(document).ready(function() {
-            $('#poll_form').submit(function(e) {
-                e.preventDefault();
-                
-                let options = [];
-                $('.option-input').each(function() {
-                    options.push({ text: $(this).val(), votes: 0 });
-                });
-                
-                let formData = {
-                    question: $('#question').val(),
-                    options: options,
-                    correctAnswerIndex: $('#correct_answer').val()
-                };
-                
-                $.ajax({
-                    url: '/polls/store',
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify(formData),
-                    success: function(response) {
-                        if (response.status === 'error') {
-                            $('#errorMsg').text(response.message);
-                            $('.alert-danger').show().delay(3000).fadeOut();
-                        } else {
-                            $('#successMsg').text('Poll added successfully!');
-                            $('.alert-success').show().delay(3000).fadeOut();
-                            setTimeout(function() {
-                                window.location.href = '/polls/add';
-                            }, 1000);
-                        }
-                    },
-                    error: function() {
-                        $('#errorMsg').text('Something went wrong. Try again.');
-                        $('.alert-danger').show().delay(3000).fadeOut();
-                    }
-                });
+      $(document).ready(function () {
+        // Get pollId from URL if editing
+        const urlParams = new URLSearchParams(window.location.search);
+        const pollId = urlParams.get("pollId");
+
+        if (pollId) {
+          // Change form title
+          $("#formTitle").text("Edit Poll");
+          $("#boxTitle").text("Edit Poll");
+          $("#pollId").val(pollId);
+
+          // Fetch poll details and populate form
+          $.getJSON(`/polls/get/${pollId}`, function (data) {
+            $("#question").val(data.question);
+
+            // Populate options
+            $("#options-container").empty();
+            data.options.forEach((option, index) => {
+              $("#options-container").append(
+                `<input type="text" class="form-control option-input" name="options[]" value="${option.text}" required>`
+              );
             });
+
+            // Set correct answer
+            $("#correct_answer").val(data.correctAnswerIndex);
+          });
+        }
+
+        // Form submit handling (Add or Update Poll)
+        $("#poll_form").submit(function (e) {
+          e.preventDefault();
+
+          let options = [];
+          $(".option-input").each(function () {
+            options.push({ text: $(this).val(), votes: 0 });
+          });
+
+          let pollId = $("#pollId").val();
+          let formData = {
+            question: $("#question").val(),
+            options: options,
+            correctAnswerIndex: $("#correct_answer").val(),
+          };
+
+          let requestType = pollId ? "PUT" : "POST";
+          let url = pollId ? `/polls/update/${pollId}` : "/polls/create";
+
+          $.ajax({
+            url: url,
+            type: requestType,
+            contentType: "application/json",
+            data: JSON.stringify(formData),
+            success: function (response) {
+              if (response.status === "error") {
+                $("#errorMsg").text(response.message);
+                $(".alert-danger").show().delay(3000).fadeOut();
+              } else {
+                $("#successMsg").text(
+                  pollId
+                    ? "Poll updated successfully!"
+                    : "Poll created successfully!"
+                );
+                $(".alert-success").show().delay(3000).fadeOut();
+                setTimeout(() => (window.location.href = "/polls"), 1000);
+              }
+            },
+            error: function () {
+              $("#errorMsg").text("Something went wrong. Try again.");
+              $(".alert-danger").show().delay(3000).fadeOut();
+            },
+          });
         });
+      });
     </script>
-</body>
+  </body>
 </html>
