--- a/views/videoNews/add_videoNews.ejs
+++ b/views/videoNews/add_videoNews.ejs
@@ -91,7 +91,7 @@
                                     <!-- Four Lines -->
                                     <div class="form-group">
                                         <label>Four Lines </span></label>
-                                        <textarea class="form-control" id="four_lines" name="four_lines" placeholder="Enter Four Lines" required><%= videoNews ? videoNews.four_lines : '' %></textarea>
+                                        <textarea class="form-control" id="four_lines" name="four_lines" placeholder="Enter Four Lines"><%= videoNews ? videoNews.four_lines : '' %></textarea>
                                     </div>
                                 
                                     <!-- Description -->
